Merged revisions 78349 via svnmerge from svn+ssh://pythondev@svn.python.org/python/trunk

........
  r78349 | eric.smith | 2010-02-22 19:11:16 -0500 (Mon, 22 Feb 2010) | 1 line

  Issue #6902: Fix problem with built-in types format incorrectly with 0 padding.
........